# CrossplatformLab3

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  main.cpp
client/gui/loginwindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
client/gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client/gui/registrationwindow/: registrationwindow.cpp  registrationwindow.h  registrationwindow.ui
protocol/: CMakeLists.txt  protocol.cpp  protocol.h
protocol/definitions/: messages.h  protocol.h  typecommand_traits.h
protocol/factory/: factory.h
protocol/util/: datetime.h
server/: CMakeLists.txt  main.cpp
server/storage/: database.cpp  database.h
server/tcpserver/: tcpserver.cpp  tcpserver.h
